<resources>
    <string name="app_name">Eyewitness App</string>
    <string name="question_age">Hur gammal är du?</string>
    <string name="man">Man</string>
    <string name="man_age">Pojke / Man</string>
    <string name="woman">Kvinna</string>
    <string name="woman_age">Flicka / Kvinna</string>
    <string name="other">Annat</string>
    <string name="question_nationality">Från vilket land är du?</string>
    <string name="question_certain">Hur säker är du på ditt val?</string>
    <string name="question_target_distance">Hur långt ifrån dig stod personen?</string>
    <string name="question_target_age">Hur gammal var personen?</string>
    <string name="question_target_recognised">Har du sett denna person INNAN detta experiment?</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="question_other_recognised">Har du sett någon av de övriga personerna INNAN detta experiment?</string>
    <string name="next">Nästa</string>
    <string name="finnish">Suomi</string>
    <string name="swedish">Svenska</string>
    <string name="english">English</string>
    <string name="title_background_information">Bakgrundsinformation</string>
    <string name="result">Resultat</string>
    <string name="text_lineup_absent">Personen finns inte bland bilderna</string>
    <string name="end_experiment">Avsluta Experimentet</string>
    <string name="information">Information</string>
    <string name="question_previous_participations">Har du varit med i detta experiment tidigare?</string>
    <string name="text_conditions">Jag har fått information om detta ögonvittnesexperiment. Jag vet att jag får avsluta när som helst. Jag deltar för att jag själv vill.</string>
    <string name="question_length">Hur lång är du?</string>
    <string name="question_sex">Är du:</string>
    <string name="notification_fill_all">Fyll i alla fält först!</string>
    <string name="title_tutorial">Testrunda</string>
    <string name="text_tutorial_instructions1">Nu övar vi lite innan vi börjar med experimentet.</string>
    <string name="text_number_instructions">Tryck på den siffra som testledaren säger</string>
    <string name="text_tutorial_instructions2">Till näst börjar huvudexperimentet.\nDet fungerar på samma vis som testrudan.</string>
    <string name="wait">Vänta</string>
    <string name="text_wait_instructions">Nu skall du få se en person.\nTitta upp och se rakt frammåt.\nEfter att du sett personen får du fortsätta.</string>
    <string name="question_target_sex">Personen var en:</string>
    <string name="question_target_height">Hur lång var personen?</string>
    <string name="question_target_weight">Hur mycket tror du att personen väger?</string>
    <string name="notification_storage_error">Kunde inte komma åt minnet</string>
    <string name="notification_storage_required">Åtkomst till minnet krävs för att läsa bilder och skriva logfiler</string>
    <string name="text_lineup_instructions_simultaneous">Nedan ser du %1$d bilder som du får se bara en gång. Om någon av bilderna är den person du nyss såg, tryck på den bilden. Om ingen av bilderna är den person du nyss såg, tryck Personen finns inte bland bilderna. Det är möjligt att personen du nyss såg inte är bland bilderna.</string>
    <string name="text_lineup_instructions_sequential">Nedan ser du en av %1$d bilder som du får se bara en gång.\nOm bilden är på den person du nyss såg, tryck JA.\nOm bilden inte visar denna person, tryck NEJ.\nDå du väljer JA, kommer inga fler bilder att visas.\nDet är möjligt att personen du nyss såg inte är bland bilderna.</string>
    <string name="settings">Inställningar</string>
    <string name="files">Filer</string>
    <string name="lineup">Lineup</string>
    <string name="sequential">Sekventiell</string>
    <string name="simultaneous">Samtidig</string>
    <string name="text_settings_target_absent">Target Absent</string>
    <string name="text_settings_target_present">Target Present</string>
    <string name="text_settings_normalisation">Normalisera fördelningen genom statistik</string>
    <string name="text_reset_stats">Nollställ Statistiken</string>
    <string name="text_settings_folder_logs">Mapp för loggfiler:</string>
    <string name="text_settings_folder_images">Mapp för bilder:</string>
    <string name="text_show_image_instructions">Instruktioner</string>
    <string name="text_settings_view_logs">Visa alla loggar</string>
    <string name="id">ID</string>
    <string name="device_id">Enhetens ID</string>
    <string name="text_setting_reset_test">Nollställ Test ID</string>
    <string name="notification_overwrite_log">Skriv över existerande log?</string>
    <string name="text_settings_testid">Nuvarande test id:</string>
    <string name="notification_delete_logs">Radera alla gamla logfiler?</string>
    <string name="notification_images_missing">Kunde inte läsa alla bilder som behövs</string>
    <string name="text_answer_questions">Svara på frågorna</string>
    <string name="text_participation_result" formatted="false">Du identifierade %d korrekt.\nPersonen du såg saknades från uppställningen %d gånger. \nNär bilden saknades gjorde du korrekt beslut att låta bli att identifiera %d gånger.\n\nTack för ditt deltagande som ögonvittne!</string>
    <string name="text_close_eye_right">Täck HÖGER öga med ena handen.</string>
    <string name="text_close_eye_left">Täck VÄNSTER öga med ena handen.</string>
    <string name="title_visual_acuity">Syntest</string>
    <string name="text_visual_acuity_instructions1">Detta är ett syntest.\nVälj åt vilket håll öppningen i bokstaven \"C\" är riktat.\nFortsätt välja tills testet slutar.</string>
    <string name="title_visual_acuity2">Välj åt vilket håll öppningen i bokstaven \"C\" är riktat.\nFortsätt välja tills testet slutar.</string>
    <string name="text_visual_acuity_instructions2">Detta är ett syntest.\nVälj åt vilket håll öppningen i bokstaven \"C\" är riktat.\nFortsätt välja tills testet slutar.</string>
    <string name="text_visual_acuity_instructions3">Syntestet är färdigt.\nDu kan öppna båda ögonen nu.</string>
    <string name="left">Vänster</string>
    <string name="right">Höger</string>
    <string name="text_settings_lineup_count">Number of Lineups</string>
    <string name="text_settings_image_count">Number of Images</string>
    <string name="text_settings_time_limit">Time Limit</string>
    <string name="sequence">Sequence</string>
    <string name="question_id_number">Deltagarnummer</string>
    <string name="manual_id_number">Ange deltagarnummer</string>
    <string name="random_id_number">Slumpvald deltagarnummer</string>
    <string name="allow_manual_id">Välj deltagarnummer</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="eye_test">Syntest</string>
    <string name="title_show">Show</string>
    <string name="text_settings_show_live">Live</string>
    <string name="text_settings_show_video">Video</string>
    <string name="text_settings_show_image">Image</string>
    <string name="text_settings_show_range">Target Distance Range</string>
    <string name="show_look">Look</string>
    <string name="text_settings_show_blurred">Blurred</string>
    <string name="questionGlasses1">Använder du vanligtvis glasögon eller kontaktlinser?</string>
    <string name="questionGlasses2">Har du glasögon eller kontaktlinser på just nu?</string>

    <string-array name="countries">
        <item>Finland</item>
        <item>Sverige</item>
        <item>Ryssland</item>
        <item>Norge</item>
        <item>Estland</item>
        <item>Tyskland</item>
        <item>Frankrike</item>
        <item>Storbrittanien</item>
        <item>Danmark</item>
        <item>Italien</item>
        <item>Spanien</item>
        <item>Ukraina</item>
        <item>Polen</item>
        <item>Rumänien</item>
        <item>Nederländerna</item>
        <item>USA</item>
        <item>Australien</item>
        <item>Kina</item>
        <item>Indien</item>
        <item>Japan</item>
        <item>Annat Land</item>
    </string-array>

    <string-array name="glassesOptions">
        <item>Ja, jag ser dåligt på långt avstånd</item>
        <item>Ja, jag ser dåligt på kort avstånd</item>
        <item>Ja, annan orsak</item>
        <item>Nej</item>
    </string-array>
</resources>
