<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aggrathon.eyewitnessapp.start.ExperimentInformationActivity"
    android:orientation="vertical"
    android:gravity="center">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="100">

        <LinearLayout
            style="@style/AppTheme.Panel"
            android:layout_width="@dimen/tabletLandscapeColumnWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/question_previous_participations"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:checkedButton="@+id/noButton"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"/>

                <RadioButton
                    android:id="@+id/noButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"/>
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/largeMargin"
                android:layout_weight="100"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:checked="false"
                android:text="@string/text_conditions"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="@dimen/tabletLandscapeColumnWidth"
        android:layout_height="wrap_content"
        android:onClick="onNextButton"
        android:layout_margin="@dimen/margin"
        android:text="@string/next"/>

</LinearLayout>
