<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    style="@style/AppTheme.Background">

    <TextView
        android:id="@+id/title"
        style="@style/AppTheme.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_background_information"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100" />

        <LinearLayout
            style="@style/AppTheme.Panel"
            android:layout_width="@dimen/tabletLandscapeColumnWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sexTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:labelFor="@+id/sexLayout"
                android:text="@string/question_sex"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent" />

            <RadioGroup
                android:id="@+id/sexRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:checkedButton="@+id/sexOther"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="0dp">

                <RadioButton
                    android:id="@+id/sexMan"
                    android:layout_width="@dimen/radioButtonWidth"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/man_age"/>

                <RadioButton
                    android:id="@+id/sexWoman"
                    android:layout_width="@dimen/radioButtonWidth"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/woman_age"/>

                <RadioButton
                    android:id="@+id/sexOther"
                    android:layout_width="@dimen/radioButtonWidth"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/other"/>

            </RadioGroup>

            <TextView
                android:id="@+id/selfLengthTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:labelFor="@+id/natField"
                android:text="@string/question_length"
                />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:orientation="horizontal"
                android:layout_marginTop="0dp">

                <SeekBar
                    android:id="@+id/selfLengthBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="220"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/selfLengthText"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/selfLengthText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="220 cm"
                    android:textAlignment="textEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/natTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:labelFor="@+id/natField"
                android:text="@string/question_nationality"
                />

            <Spinner
                android:id="@+id/spinnerNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:spinnerMode="dialog"
                android:layout_marginTop="0dp"/>

            <TextView
                android:id="@+id/glassesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:labelFor="@+id/natField"
                android:text="@string/questionGlasses1" />

            <Spinner
                android:id="@+id/spinnerGlasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/glassesTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:labelFor="@+id/natField"
                android:text="@string/questionGlasses2" />

            <RadioGroup
                android:id="@+id/glassesRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:checkedButton="@+id/sexOther"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="0dp">

                <RadioButton
                    android:id="@+id/glassesYes"
                    android:layout_width="@dimen/radioButtonWidth"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/yes"/>

                <RadioButton
                    android:id="@+id/glassesNo"
                    android:layout_width="@dimen/radioButtonWidth"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/no"/>

            </RadioGroup>

        </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="@dimen/bottomButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1"
        android:onClick="onStartButton"
        android:text="@string/next"/>

</LinearLayout>
