<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.Background"
    android:background="@drawable/background_colorful"
    android:orientation="vertical"
    tools:context="aggrathon.eyewitnessapp.start.NrActivity">

    <TextView
        android:id="@+id/title"
        style="@style/AppTheme.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/question_id_number"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        android:layout_weight="100">

        <LinearLayout
            style="@style/AppTheme.Panel"
            android:layout_width="@dimen/tabletLandscapeColumnWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/question_id_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSpecify"
                android:text="@string/manual_id_number"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onNext"
                android:text="@string/random_id_number"/>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
