<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    tools:context="aggrathon.eyewitnessapp.experiment.TargetQuestionsActivity"
    android:gravity="center">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:layout_margin="@dimen/margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/tabletLandscapeColumnWidth"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/targetSexTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:text="@string/question_target_sex"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:checkedButton="@+id/sexMan"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/sexMan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/man"/>

                    <RadioButton
                        android:id="@+id/sexWoman"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/woman"/>
                </RadioGroup>

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="@dimen/verticalSpace"
                    android:layout_margin="@dimen/margin"/>

                <TextView
                    android:id="@+id/targetHeightTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/question_target_height"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin">

                    <SeekBar
                        android:id="@+id/heightBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:max="220"
                        android:progress="170"/>

                    <TextView
                        android:id="@+id/heightText"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="170 cm"
                        android:textAlignment="textEnd"/>

                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="@dimen/verticalSpace"
                    android:layout_margin="@dimen/margin"/>

                <TextView
                    android:id="@+id/targetWeightTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:paddingTop="@dimen/largeMargin"
                    android:text="@string/question_target_weight"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin">

                    <SeekBar
                        android:id="@+id/weightBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:max="150"
                        android:progress="70"/>

                    <TextView
                        android:id="@+id/weightText"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="70 kg"
                        android:textAlignment="textEnd"/>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="@dimen/tabletLandscapeColumnWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1"
        android:onClick="onNextButton"
        android:text="@string/next"/>


</LinearLayout>
