<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="aggrathon.eyewitnessapp.light.experiment.LineupActivity"
    style="@style/AppTheme.Background">

    <TextView
        android:id="@+id/title"
        style="@style/AppTheme.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:padding="@dimen/largeMargin"
        android:text="@string/text_lineup_instructions_sequential"
        android:textAlignment="center"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100">

        <ImageView
            android:id="@+id/imageView"
            style="@style/AppTheme.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
        </ImageView>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/noButton"
            android:layout_width="@dimen/bottomButtonWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:onClick="onNextImageButton"
            android:text="@string/no"/>

        <Button
            android:id="@+id/yesButton"
            android:layout_width="@dimen/bottomButtonWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:onClick="onSelectImageButton"
            android:text="@string/yes"
            android:theme="@style/AppTheme.Button.Color"/>
    </LinearLayout>

</LinearLayout>
