<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aggrathon.eyewitnessapp.experiment.ShowActivity"
    android:orientation="vertical"
    android:gravity="center"
    style="@style/AppTheme.Background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.ActionBar"
        android:padding="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/show_look"
            android:textAlignment="center"
            android:textAppearance="@style/AppTheme.CenterTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back"
            style="@android:style/Widget.ImageButton"
            android:layout_width="128dp"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="Back"
            android:onClick="onPrevButton"
            android:padding="8dp"
            android:paddingBottom="12dp"
            android:scaleType="fitStart"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        style="@style/AppTheme.Panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="100"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/showImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@drawable/placeholder_image" />

        <TextView
            android:id="@+id/showLive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_wait_instructions" />

        <VideoView
            android:id="@+id/showVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="@dimen/bottomButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1"
        android:onClick="onNextButton"
        android:text="@string/next" />

</LinearLayout>
